--- a/index.html
+++ b/index.html
@@ -1,7 +1,24 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm Maxwell.</p>
-</body>
+    <body>
+      <h1>Maxwell Jones</h1> 
+      <h2>Performing Arts</h2>
+      <div>
+        <h2>Actor</h2>
+        <h3>Alpine Theater Project Performances</h3>
+        <p>ATP: The Lion King 2017</p>
+        <p>ATP: Frozen 2018</p>
+        <p>ATP: The Descendants 2019</p>
+        <p>ATP: Suessical 2022</p>
+        <p>ATP: Les Mis 2023</p>
+        <p>ATP: Spongebob The Musical 2023</p>
+        <p>ATP: Cats 2024</p>
+        <p>ATP: Mean Girls 2024</p>
+        <p>ATP: Summer Camp 2022</p>
+        <p>ATP: Summer Camp 2023</p>
+        <p>ATP: Summer Camp 2024</p>
+        <p>ATP: Yuletide Affair 2022</p>
+        <p>ATP: Yuletide Affair 2023</p>
+      </div>
+    </body>
 </html>
