--- a/index.html
+++ b/index.html
@@ -5,20 +5,35 @@
       <h2>Performing Arts</h2>
       <div>
         <h2>Actor</h2>
-        <h3>Alpine Theater Project Performances</h3>
-        <p>ATP: The Lion King 2017</p>
-        <p>ATP: Frozen 2018</p>
-        <p>ATP: The Descendants 2019</p>
-        <p>ATP: Suessical 2022</p>
-        <p>ATP: Les Mis 2023</p>
-        <p>ATP: Spongebob The Musical 2023</p>
-        <p>ATP: Cats 2024</p>
-        <p>ATP: Mean Girls 2024</p>
-        <p>ATP: Summer Camp 2022</p>
-        <p>ATP: Summer Camp 2023</p>
-        <p>ATP: Summer Camp 2024</p>
-        <p>ATP: Yuletide Affair 2022</p>
-        <p>ATP: Yuletide Affair 2023</p>
+        <div>
+            <h3>Alpine Theater Project Performances</h3>
+            <p>ATP: The Lion King 2017</p>
+            <p>ATP: Frozen 2018</p>
+            <p>ATP: The Descendants 2019</p>
+            <p>ATP: Suessical 2022</p>
+            <p>ATP: Les Mis 2023</p>
+            <p>ATP: Spongebob The Musical 2023</p>
+            <p>ATP: Cats 2024</p>
+            <p>ATP: Mean Girls 2024</p>
+            <p>ATP: Summer Camp 2022</p>
+            <p>ATP: Summer Camp 2023</p>
+            <p>ATP: Summer Camp 2024</p>
+            <p>ATP: Yuletide Affair 2022</p>
+            <p>ATP: Yuletide Affair 2023</p>
+            <h3>Kalispell Montessori Elementary Performances</h3>
+            <p>KME: The Wizard Of Oz 2016</p>
+            <p>KME: Alice In Wonderland 2017</p>
+            <p>KME: Charlie and the Chocolate Factory 2018</p>
+            <p>KME: As You Like It 2021</p>
+            <p>KME: Romeo And Juliet 2022</p>
+            <p>KME: West Side Story 2022</p>
+        </div>
+        <h2>Directing</h2>
+        <div>
+            <h3>Kalispell Montessori Elementary (Middle School) Plays</h3>
+            <p>KME: Hamilton 2023</p>
+            <p>KME: High School Musical 2024</p>
+        </div>
       </div>
     </body>
 </html>
