Added link to the lion king

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <h2>Actor</h2>
         <div>
             <h3>Alpine Theater Project Performances</h3>
-            <p>ATP: The Lion King 2017</p>
+            <a href = "https://www.youtube.com/watch?v=ZblrTrgyHKQ&t=6s">ATP: The Lion King 2016</a>
             <p>ATP: Frozen 2018</p>
             <p>ATP: The Descendants 2019</p>
             <p>ATP: Suessical 2022</p>
@@ -18,8 +18,8 @@
             <p>ATP: Summer Camp 2022</p>
             <p>ATP: Summer Camp 2023</p>
             <p>ATP: Summer Camp 2024</p>
-            <p>ATP: Yuletide Affair 2022</p>
-            <p>ATP: Yuletide Affair 2023</p>
+            <p>ATP: Yuletide Affair Kids 2022</p>
+            <p>ATP: Yuletide Affair Kids 2023</p>
             <h3>Kalispell Montessori Elementary Performances</h3>
             <p>KME: The Wizard Of Oz 2016</p>
             <p>KME: Alice In Wonderland 2017</p>
