--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
         <div>
             <h3>Alpine Theater Project Performances</h3>
             <a href = "https://www.youtube.com/watch?v=ZblrTrgyHKQ&t=6s">ATP: The Lion King 2016</a>
-            <p>ATP: Frozen 2018</p>
-            <p>ATP: The Descendants 2019</p>
-            <p>ATP: Suessical 2021</p>
-            <p>ATP: Spongebob The Musical 2022</p>
-            <p>ATP: Les Mis 2023</p>
+            <a href="https://www.broadwayworld.com/montana/article/ATP-Kids-Launches-Largest-Production-Ever-with-FROZEN-JR-20191004">ATP: Frozen 2017</a>
+            <a href="https://www.youtube.com/watch?v=r967zwNp0OM">ATP: The Descendants 2019</a>
+            <a href="https://atpwhitefish.org/shows/2021/seussicaljr">ATP: Suessical 2021</a>
+            <a href="https://atpwhitefish.org/shows/2022/spongebob">ATP: Spongebob The Musical 2022</a>
+            <a href="https://whitefishpilot.com/news/2023/apr/26/student-actors-perform-atp-kids-production-les-mis/">ATP: Les Mis 2023</a>
             <p>ATP: Cats 2024</p>
-            <p>ATP: Mean Girls 2024</p>
+            <a href="https://atpwhitefish.org/shows/2024/meangirls">ATP: Mean Girls 2024</a>
             <p>ATP: Summer Camp 2022</p>
             <p>ATP: Summer Camp 2023</p>
             <p>ATP: Summer Camp 2024</p>
@@ -31,8 +31,8 @@
         <h2>Directing</h2>
         <div>
             <h3>Kalispell Montessori Elementary (Middle School) Plays</h3>
-            <p>KME: Hamilton 2023</p>
-            <p>KME: High School Musical 2024</p>
+            <a href="https://www.youtube.com/watch?v=4QFS9DxiDwI">KME: Hamilton 2023</a>
+            <a href="https://www.youtube.com/watch?v=ECgNMCIEJNE">KME: High School Musical 2024</a>
         </div>
       </div>
     </body>
